<resources>
    <string name="no_email">Undefined Email</string>

    <string name="no_username">Undefined Username</string>

    <string name="delete_message_account">Voulez-vous supprimer défintivement ce compte ? </string>

    <string name="choice_no">Non</string>

    <string name="choice_yes">Oui</string>

    <string name="needMail">Adresse mail manquante</string>

    <string name="needPass">Mot de Passe manquanr</string>

    <string name="emptyField">Champs manquants</string>

    <string name="badUser">Utilisateur introuvable</string>

    <string name="app_name">SmartCity</string>

    <string name="accueil">Accueil</string>

    <string name="identififier">S\'identifier</string>

    <string name="creerCompte">Créer un compte</string>

    <string name="connexion">Connexion</string>

    <string name="mail">Adresse Mail</string>

    <string name="aucunEvenement">Aucun Evenement</string>

    <string name="news">News</string>

    <string name="pseudo">Pseudo</string>

    <string name="deconnect">Déconnecter</string>

    <string name="shopping">Shopping</string>

    <string name="fav">Favoris</string>

    <string name="mesGroupes">Mes Groupes</string>

    <string name="groupes">Groupes</string>

    <string name="nomGroupe">Nom Du Groupe</string>

    <string name="modif">Modifier</string>

    <string name="suppr">Supprimer</string>

    <string name="age">Age</string>

    <string name="parametres">Paramètres</string>

    <string name="Profil">Profil</string>

    <string name="motDePasse">Mot de Passe</string>

    <string name="oubliPass">Mot de Passe oublié ?</string>

    <string name="seConnecter">Se Connecter</string>

    <string name="valider">Valider</string>

    <string name="nom">Nom</string>

    <string name="prenom">Prénom</string>

    <string name="home">Home</string>

    <string name="ad">Publicité</string>

    <string name="reseaux">Réseaux</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_base">BaseActivity</string>

    <string name="restaurant">Restaurant</string>

    <string name="error_unknown_error">Une erreur a eu lieu</string>

    <string name="add_favorite">Add to Favorites</string>

    <string name="map">Map</string>

    <string name="ads">Advertisement</string>

    <string name="info">Informations</string>

    <string name="textview">TextView</string>

    <string name="creer">Créer</string>

    <string name="message">Message</string>

    <string name="envoyer">Envoyer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="titre">Titre: </string>
    <string name="date">Date: </string>
    <string name="informations_supplementaires">Informations Supplémentaires:</string>
    <string name="annuler">Annuler</string>
    <string name="ajouterEvenement">Ajouter un Evenement</string>
    <string name="le">Le</string>
    <string name="a_avec_accent">à:</string>
    <string name="min">min</string>
    <string name="h">h</string>
    <string name="publicites">Publicités</string>
    <string name="configuration">Configuration</string>
    <string name="profil">Profil</string>
    <string name="agenda">Agenda</string>
    <string name="adresse">Adresse</string>
    <string name="horaires">Horaires</string>
    <string name="notation">Notation</string>
    <string name="telephone">Téléphone</string>
    <string name="site_web">Site Web</string>
    <string name="commerces">Commerces</string>
</resources>
