<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/quantum_white_100"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/places_text_white_alpha_26">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:id="@+id/places_details_cardview_image"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/quantum_black_100"
                android:text="@string/nom"
                android:background="@drawable/back"
                android:gravity="center_horizontal"
                android:id="@+id/places_details_cardview_nom">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/notation"
                android:id="@+id/places_details_cardview_notation">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/adresse"
                android:id="@+id/places_details_cardview_adresse">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/horaires"
                android:id="@+id/places_details_cardview_horaires">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/telephone"
                android:autoLink="phone"
                android:clickable="true"
                android:id="@+id/places_details_cardview_telephone">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/site_web"
                android:id="@+id/places_details_cardview_site_web"
                android:clickable="true"
                android:autoLink="web">

            </TextView>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>