<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/connexionTextView"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="150dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/connexionTextView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/inputLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/connexionTextView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="Adresse Email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motDePasse"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/connexionTextView"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:hint="Mot de passe"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oubliPass"
        android:layout_below="@id/inputLayout"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:onClick="onForgetPassword"
        android:layout_marginRight="20dp"
        android:id="@+id/questionPass"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/questionPass"
        android:layout_marginEnd="113dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:onClick="goHome"
        android:padding="10dp"
        android:text="@string/seConnecter"
        android:textSize="20sp" />


</RelativeLayout>