<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accueil"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttons_layout"
        android:layout_marginBottom="200dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:id="@+id/buttons_layout"
        >

        <Button
            android:layout_marginTop="40dp"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="goIdentification"
            android:text="@string/identififier"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/white"></Button>

        <Button
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="goCreateAccount"
            android:text="@string/creerCompte"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/white"
            android:layout_marginBottom="40dp"></Button>

    </LinearLayout>

</RelativeLayout>