<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/accueil"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:id="@+id/buttons_layout"
        >

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:onClick="goIdentification"
            android:text="@string/identififier"
            android:visibility="visible"></Button>

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ToolBarStyle"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@android:color/white"
            android:onClick="goCreateAccount"
            android:text="@string/creerCompte"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:visibility="visible"></Button>

    </LinearLayout>

</RelativeLayout>